Fixed overflow on startup

--- a/src/components/Portfolio/About.css
+++ b/src/components/Portfolio/About.css
@@ -135,7 +135,7 @@
 }
 
 .compositeCaption {
-    margin-left: 58vw;
+    margin-left: 57vw;
     font-family: MidnightBlack;
     color: black;
     font-style: oblique;
