--- a/src/components/Startup/Startup.css
+++ b/src/components/Startup/Startup.css
@@ -8,7 +8,6 @@
   background-color: black;
   color: white;
   font-family: 'Courier New', Courier, monospace;
-  padding: 20px;
   overflow-y: hidden;
   overflow: hidden;
 }
